@startuml
!include ../style.puml
skinparam arrowThickness 1.1
skinparam classAttributeIconSize 0
hide circle

skinparam ClassFontColor #000000
skinparam ClassBorderColor #000000
skinparam ClassBackgroundColor #FFFFAA

title System Memory State (Step 5)

class "skuList:SKUList" as skuList

class "sku:SKU" as sku {
    skuID = "PALLET-A"
    skuLocation = Location.A1
}

class "skuTaskList:SKUTaskList" as taskList {
    skuTaskList = []
}

skuList o-- sku : contains >
sku *-- taskList : owns and encapsulates >

@enduml